@@ -1,0 +1,10 @@
+Date: Wed, 03 Nov 1999 11:24:29 -0500
+To: user@example.com
+From: from@example.com
+Subject: test Wed, 03 Nov 1999 11:24:29 -0500
+Message-Id: <19991103112429.047942@localhost>
+X-Mailer: swaks vDEVRELEASE jetmore.org/john/code/swaks/
+
+This is a test mailing
+
+
